# Binocular

./: .gitignore  README.md  huggingface_readme.md  pyproject.toml  requirements.txt  setup.py
Binocular/configs/: m2_dev.yaml
Binocular/datasets/nabirds/: README.md
Binocular/examples/: README.md  run_sanity_checks.sh
Binocular/models/: README.md
